Fix sizing on small windows

--- a/home/src/main.scss
+++ b/home/src/main.scss
@@ -6,8 +6,6 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
   display: flex;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
 }
 
 main {
